# afs-indegene

./: .gitignore  Cargo.toml  README.md  api-server-compose.yml
.github/workflows/: release.yml
afs-api-server/: Cargo.toml  Dockerfile
afs-api-server/src/: main.rs
afs-checkout-tool/: Cargo.toml
afs-checkout-tool/src/: args.rs  main.rs  send_status_message.rs
afs-cli/: Cargo.toml
afs-cli/src/: args.rs  config.rs  main.rs
afs-cli/src/models/: args.rs  config.rs  mod.rs  revision.rs
afs-cli/src/utils/: check_veeva_session_id.rs  compress.rs  get_key_messages.rs  get_keymessage_ids.rs  mod.rs  read_excel.rs  send_status_message.rs  upload_to_veeva.rs
afs-daemon/: Cargo.toml
afs-daemon/src/: main.rs  models.rs
afs-daemon/src/amqp/: connection.rs
afs-daemon/src/utils/: amqp_pool.rs  amqp_send.rs  mod.rs
afs-desktop-app/: index.html  package-lock.json  package.json
afs-desktop-app/src/: App.css  App.jsx  index.css  main.jsx
afs-desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
afs-desktop-app/src-tauri/src/: main.rs
afs-desktop-app/src-tauri/src/utils/: cancel_subscription.rs  encode_decode_json.rs  mod.rs  send_svn_url_to_api_server.rs  subscribe_to_messages.rs
afs-desktop-app/src/components/: CreateConfigToml.css  CreateConfigToml.jsx  StatusList.css  StatusList.jsx  UploadKeyMessages.css  UploadKeyMessages.jsx
afs-desktop-app/src/components/content/: ContentSection.jsx  CreateConfigToml.css  CreateConfigToml.jsx  StatusList.css  StatusList.jsx  UploadKeyMessages.jsx
afs-desktop-app/src/components/left-nav/: LeftNav.jsx  LeftNav.module.css  LeftNavTask.jsx  LeftNavTask.module.css
afs-desktop-app/src/components/micro/: GenericButton.jsx  GenericButton.module.css  Input.jsx  Input.module.css  SendButton.jsx  SendButton.module.css
afs-desktop-app/src/utils/: getKeyValue.js
axum-server/: Cargo.toml
axum-server/src/: errors.rs  main.rs
axum-server/src/routes/: create_binder.rs  get_doc_types.rs  get_document_properties.rs  mod.rs
axum-server/src/utils/: auth.rs  encode_json.rs  extract_string.rs  get_instance_url.rs  mod.rs  session_id.rs  zoho_auth.rs
