[package]
name = "afs-indegene"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = [
    "afs-cli",
    "afs-daemon",
    "afs-checkout-tool",
    "afs-api-server",
    "afs-desktop-app/src-tauri",
    "axum-server"
]

[[bin]]
name = "afs-cli"
path = "afs-cli/src/main.rs"

[[bin]]
name = "afs-daemon"
path = "afs-daemon/src/main.rs"

[[bin]]
name = "afs-checkout-tool"
path = "afs-checkout-tool/src/main.rs"

[[bin]]
name = "afs-api-server"
path = "afs-api-server/src/main.rs"

[[bin]]
name = "axum-server"
path = "axum-server/src/main.rs"

[dependencies]
actix-web = "4.3.1"
clap = { version = "4.3.19", features = ["derive"] }
deadpool-lapin = "0.10.0"
lapin = "2.3.1"
reqwest = { version = "0.11.18", features = ["json", "multipart", "blocking"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
ssh2 = "0.9.4"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.7.6"
url = "2.4.0"
uuid = { version = "1.4.1", features = ["v4"] }
walkdir = "2.3.3"
xml-rs = "0.8.16"
zip = "0.6.6"
tauri = { version = "1.4.1" }
futures-lite = "1.13.0"
async-global-executor = "2.3.1"
axum = "0.6.20"
hyper = { version = "0.14.27", features = ["full"] }
tower = "0.4.13"
