[package]
name = "afs-checkout-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
url = "2.4.0"
reqwest = "0.11.18"
tokio = { version = "1.28.2", features = ["full"] }
serde_json = "1.0.96"