[package]
name = "afs-checkout-tool"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
url = "2.4.0"
reqwest = "0.11.18"
tokio = { version = "1.29.1", features = ["full"] }
serde_json = "1.0.103"
