[package]
name = "afs-cli"
version = "0.1.0"
edition = "2021"
authors = ["Priyadarshan Giri <giripriyadarshan@gmail.com>"]
readme = "README.md"
description = "A tool to automate update, compress and upload process to Veeva Vault"
repository = "https://github.com/giripriyadarshan/afs-indegene"
exclude = ["target", "Cargo.lock", ".gitignore", ".git"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.19.1"
clap = { version = "4.2.7", features = ["derive"] }
image = "0.24.6"
pdfium-render = "0.8.3"
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.7.3"
zip = "0.6.5"
