[package]
name = "afs-cli"
version = "0.1.0"
edition = "2021"
authors = ["Priyadarshan Giri <giripriyadarshan@gmail.com>"]
readme = "README.md"
description = "A tool to automate update, compress and upload process to Veeva Vault"
repository = "https://github.com/giripriyadarshan/afs-indegene"
exclude = ["target", "Cargo.lock", ".gitignore", ".git"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
serde = { version = "1.0.175", features = ["derive"] }
toml = "0.7.6"
zip = "0.6.6"
walkdir = "2.3.3"
xml-rs = "0.8.16"
tokio = { version = "1.29.1", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json", "multipart", "blocking"] }
url = "2.4.0"
serde_json = "1.0.103"