[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
hyper = { version = "0.14.27", features = ["full"] }
tower = "0.4.13"
tokio = { version = "1.32.0", features = ["full"] }
serde_json = "1.0.103"
toml = "0.8.0"
url = "2.4.0"
reqwest = { version = "0.11.18", features = ["json", "multipart", "blocking"] }
base64 = "0.21.4"